Revert "Fixed padding in header and second section on mobile view too cramped"
This reverts commit 50cd1d2b01771aa57af38193e3305fcc5b01386a.

--- a/app/scss/_designed.scss
+++ b/app/scss/_designed.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 100px 10px;
+    padding: 100px 20px;
     // background-color: yellowgreen;
 
     &__img {
